<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:stretchColumns="*">

        <TableRow
            style="@style/DaysRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="7">

            <TextView
                style="@style/DaysHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="3dp"
                android:text="@string/course_header" />

            <TextView
                style="@style/DaysHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="3dp"
                android:text="@string/instructor_header" />

            <TextView
                style="@style/DaysHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/room_header" />

            <TextView
                style="@style/DaysHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/day_header" />

            <TextView
                style="@style/DaysHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/time_header" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:padding="24dp"
        android:weightSum="4">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/login_view_margin"
            android:background="@drawable/button_bg"
            android:text="@string/register_button"
            android:textColor="@color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/login_view_margin"
            android:background="@drawable/button_bg"
            android:text="@string/cancel_button"
            android:textColor="@color/white" />
    </LinearLayout>

</FrameLayout>
