<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Poly Cams Portal"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/hack"
        android:textStyle="bold"
        android:textSize="24dp"
        android:padding="24dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:weightSum="4"
        android:padding="24dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:layout_margin="@dimen/login_view_margin"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:layout_margin="@dimen/login_view_margin"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:background="@drawable/button_bg"
            android:textColor="@color/white"
            android:layout_margin="@dimen/login_view_margin"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/schedule_button"
            android:background="@drawable/button_bg"
            android:textColor="@color/white"
            android:layout_margin="@dimen/login_view_margin"/>
    </LinearLayout>
</FrameLayout>