<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/dayHeaderBg"
    android:padding="10dp">
    <TextView
        android:id="@+id/schedule_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/DaysRow"
        android:textSize="20dp"
        android:text="@string/schedule_title"/>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/schedule_header"
        android:layout_below="@id/schedule_title"
        android:weightSum="6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/DaysRow">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/dayRowFg"
            android:background="@drawable/cell_with_border"
            android:fontFamily="@font/hack"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/time_header"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/dayRowFg"
            android:background="@drawable/cell_with_border"
            android:fontFamily="@font/hack"
            android:gravity="center"
            android:layout_weight="2"
            android:padding="3dp"
            android:text="@string/course_header"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/dayRowFg"
            android:background="@drawable/cell_with_border"
            android:fontFamily="@font/hack"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/room_header"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/dayRowFg"
            android:background="@drawable/cell_with_border"
            android:fontFamily="@font/hack"
            android:layout_weight="2"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/instructor_header"
            />
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/courses_recycler_view"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_below="@id/schedule_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="1dp"/>
</RelativeLayout>