<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    android:background="@color/colorPrimary">
    <TableRow
        style="@style/DaysRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/DaysHeader"
            android:text="@string/time_header"
            android:padding="3dp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            style="@style/DaysHeader"
            android:text="@string/course_header"
            android:padding="3dp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/DaysHeader"
            android:text="@string/room_header"
            android:padding="3dp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            style="@style/DaysHeader"
            android:text="@string/instructor_header"
            android:padding="3dp"
            />
    </TableRow>
    <TableRow
        android:weightSum="6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/DaysRow">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/hack"
            android:layout_weight="1"
            android:text="8:00"
            android:padding="3dp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/hack"
            android:textAlignment="center"
            android:text="Mobile Device Applications"
            android:layout_weight="2"
            android:padding="3dp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/hack"
            android:text="1026"
            android:textAlignment="center"
            android:layout_weight="1"
            android:padding="3dp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/hack"
            android:text="Dr. Oguzhan Topsakal"
            android:layout_weight="2"
            android:textAlignment="center"
            android:padding="3dp"
            />
    </TableRow>
</TableLayout>